Bug 1737540 - Make `AutoBlockElementsJoiner::PrepareToDeleteNonCollapsedRanges()` consider to delete given range when there is no editable block parent r=m_kato,a=dsmith

Currently, it assumes that first range is always in editable block parent,
but if the range is in an inline editing host, it's not true.

The given ranges should always be in same editing host at this time because of:
* https://searchfox.org/mozilla-central/rev/011ed92913b38e950977ab3fc56ae68a8f3bca12/editor/libeditor/HTMLEditorDeleteHandler.cpp#1031,1064
* https://searchfox.org/mozilla-central/rev/011ed92913b38e950977ab3fc56ae68a8f3bca12/editor/libeditor/HTMLEditorDeleteHandler.cpp#1080,1117

Therefore, it's enough to check whether the range crosses or not editing host
boundaries only with `MOZ_ASSERT(_IF)`.

Differential Revision: https://phabricator.services.mozilla.com/D130153